<resources>
    <string name="app_name">aula02</string>
    <string name="action_settings">Settings</string>
    <string name="to_label">Para: </string>
    <string name="to_hint">Destinatários</string>
    <string name="message">Escreva a Mensagem Aqui</string>
    <string name="send">Enviar</string>
    <string name="to_login">Login: </string>
    <string name="h_login"> Digite seu Login</string>
    <string name="to_senha">Senha: </string>
    <string name="h_senha">Digite sua Senha </string>
    <string name="to_assunto">Assunto: </string>
    <string name="h_assunto">Digite o Assunto</string>

    <string-array name="spinner_values">
        <item>Spinner 1</item>
        <item>Spinner 2</item>
        <item>Spinner 3</item>
        <item>Spinner 4</item>
    </string-array>
</resources>